--- a/src/content.css
+++ b/src/content.css
@@ -1,8 +1,21 @@
 /* Content script styles */
-#bookmark-extension-root {
+@import "tailwindcss";
+/* Shadow DOM specific styles */
+:host {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+/* Ensure proper isolation */
+* {
+  box-sizing: border-box;
+}
+
+/* Override any potential host page interference */
+div, span, button, input {
+  all: initial;
+  font-family: inherit;
 }
